# heinzel-ai-core-py

./: .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml
src/core/: __init__.py  addon.py  capabilities.py  config.py  context.py  daemon.py  dispatcher.py  factory.py  heartbeat.py  hooks.py  iobridge.py  keys.py  log.py  loop.py  mcp.py  memcaps.py  prompt.py  reasoning.py  session.py
tests/: test_context.py  test_dispatcher.py  test_keys.py  test_loop.py  test_prompt.py  test_session.py
